src/styles/_page.scss
body {
	padding: $container-padding 0;
}

header {
	@include clearfix();
	margin-bottom: $container-margin;
	border-bottom: $divider-border;
}

nav {
	@extend .navbar;
	@extend .navbar-expand-md;
	@extend .navbar-light;

	> a {
		@extend .navbar-brand;

		h3 {
			font-size: 1.5em;
		}
	}

	button {
		@extend .navbar-toggler;
	}

	div {
		@extend .collapse;
		@extend .navbar-collapse;
		@extend .justify-content-end;
	}

	ul {
		@extend .navbar-nav;
		@extend .nav-pills;

		> li {
			@extend .nav-item;

			> a {
				@extend .nav-link;
				margin: 0;
				padding: $nav-link-padding;

				@include media-breakpoint-up(sm) {
					margin-right: $nav-link-margin;
				}

				&.active {
					color: $nav-link-active-color;
				}
			}
		}
	}
}

main {
	min-height: $content-min-height;
}

.jumbotron {
	text-align: center;
}

footer {
	border-top: $divider-border;
	padding-top: $container-padding;
	color: $text-muted;
}

.column {
	padding: 0 $container-padding;
	
	@include media-breakpoint-up(sm) {
		@include make-col(6);
	}
}

